--- a/iishconference_basemodule/iishconference.css
+++ b/iishconference_basemodule/iishconference.css
@@ -1,33 +1,6 @@
-.login_halfwidth {
-	border: 1px solid;
-	border-radius: 5px;
-	-moz-border-radius: 5px;
-	padding: 10px;
-	float: left;
-	width: 43%;
-}
+/* IISH CONFERENCE THEMES */
 
-.rightmargin {
-	margin-right: 10px;
-}
-
-.bottommargin {
-	margin-bottom: 20px;
-}
-
-.topmargin {
-	margin-top: 20px;
-}
-
-.largertopmargin {
-	margin-top: 27px;
-}
-
-.eca_halfwidth {
-	width: 43%;
-}
-
-.preregister_fullwidth {
+.iishconference_container, fieldset.form-wrapper {
 	border: 1px solid;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
@@ -37,20 +10,26 @@
 	width: 100%;
 }
 
-.step {
+.iishconference_container_header, fieldset.form-wrapper > legend {
 	font-weight: bold;
 	font-size: 120%;
 	display: block;
 	margin-bottom: 10px;
-	text-align: right;
 }
 
-.header_login, .header_personalpage, .header_preregister {
-	font-weight: bold;
-	font-size: 120%;
-	display: block;
-	margin-bottom: 10px;
+fieldset.form-wrapper > legend {
+    margin-bottom: 0;
 }
+
+.iishconference_container_inline {
+    /*display: inline-block;*/
+}
+
+.iishconference_container_label {
+    font-weight: bold;
+}
+
+/* OTHER CSS */
 
 .extra_uitleg {
 	font-style: italic;
@@ -58,10 +37,6 @@
 
 .form-type-textfield {
 	width: 200px;
-}
-
-.label_personalpage {
-	font-weight: bold;
 }
 
 .eca_remark {
@@ -155,8 +130,4 @@ td.program {
 #payment-buttons input {
     display: block;
     margin-bottom: 10px;
-}
-
-div.container-inline form {
-    display: inline-block;
 }
