--- a/iishconference_basemodule/iishconference.css
+++ b/iishconference_basemodule/iishconference.css
@@ -23,10 +23,6 @@
     margin-bottom: 0;
 }
 
-.iishconference_container_inline {
-    /*display: inline-block;*/
-}
-
 .iishconference_container_label {
     font-weight: bold;
 }
@@ -82,58 +78,14 @@
 }
 
 .readonly-text {
-    border: 0px;
+    border: 0;
     background-color: transparent;
 }
-
-/*
-.eca_ul {
-	type: circle;
-	margin-bottom: 30px;
-}
-
-.hh {
-	color: green;
-}
-*/
 
 table.noborder {
 	width: 100%;
 }
 
 td.noborder {
-	border: 1px solid white;
-}
-
-/*
-th.chairs_and_volunteers {
-	font-weight: bold;
-}
-
-ol.maillist li {
-	margin-bottom: 20px;
-}*/
-
-table.program {
-	width: 100%;
-	padding: 20;
-	border-collapse: collapse;
-}
-
-td.program {
-	border: 1px solid white;
-}
-
-.program_day {
-	font-weight: bold;
-	margin-bottom: 25px;
-	font-size: 125%;
-}
-
-.program_hr {
-	margin-top: 20px;
-	margin-bottom: 40px;
-	background-color: #E61A3C;
-	border-color: #E61A3C;
-	height: 1px;
+	border: 0;
 }
