--- a/iishconference_basemodule/iishconference.css
+++ b/iishconference_basemodule/iishconference.css
@@ -77,7 +77,7 @@
     font-weight: bold;
 }
 
-.readonly-text {
+textarea.readonly-text, select.readonly-text, input.readonly-text {
     border: 0;
     background-color: transparent;
 }
