added vertical alignment for program added noprint class to program left menu

--- a/iishconference_basemodule/iishconference.css
+++ b/iishconference_basemodule/iishconference.css
@@ -89,3 +89,13 @@ table.noborder {
 td.noborder {
 	border: 0;
 }
+
+td.program {
+	vertical-align: top;
+}
+
+@media print {
+	.noprint {
+		display: none !important;
+	}
+}
