--- a/iishconference_program/conference_program.css
+++ b/iishconference_program/conference_program.css
@@ -5,6 +5,7 @@ table.program {
 }
 
 td.program {
+    vertical-align: top;
     border: 1px solid white;
 }
 
@@ -14,10 +15,28 @@ td.program {
     font-size: 125%;
 }
 
+.program_day.showing {
+    display: inline;
+}
+
 .program_hr {
     margin-top: 20px;
     margin-bottom: 40px;
     background-color: #E61A3C;
     border-color: #E61A3C;
     height: 1px;
+}
+
+.download-icon {
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    background: url('download_paper.png') left top;
+}
+
+.download-icon-info {
+    display: inline-block;
+    float: right;
+    font-size: 80%;
+    font-style: italic;
 }
