--- a/iishconference_programme/conference_programme.css
+++ b/iishconference_programme/conference_programme.css
@@ -1,3 +1,7 @@
+#iishconference-programme-network-form, #iishconference-programme-text-form {
+    display: inline;
+}
+
 table.programme {
     width: 100%;
     padding: 20;
